--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Real-Time-Flights-Ingestion/client-api#readme",
   "dependencies": {
-    "koa": "^2.15.0"
+    "koa": "^2.15.0",
+    "koa-router": "^12.0.1"
   }
 }
